<!--
  ~  Copyright (C) 2017 MINDORKS NEXTGEN PRIVATE LIMITED
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~      https://mindorks.com/license/apache-v2
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License
  -->

<resources>
    <string name="app_name">K2E</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="unregistered_message">This account is not registered with K2 Environmental</string>

    <string name="signout_message">You have successfully signed out</string>

    <!-- TODO: Remove or change this placeholder text -->


    <!--Google Login-->


    <!--Toolbar menus-->

    <!--Drawer-->

    <!--Drawer Menus-->

    <!--App Message-->

    <!--Login-->

    <!--Login Validation-->

    <!--about fragment-->

    <!--rating dialog-->

    <!--play store-->
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>

    <!--button-->

    <!--feed-->

    <!--empty state-->
    <string name="empty_screen">You have no jobs loaded\nClick the button to add jobs from WorkflowMax</string>
    <string name="title_photo">Site Photo</string>
    <string name="job_description_label">Description</string>
    <string name="job_description_placeholder">Asbestos testing in 5 units</string>
    <string name="job_clientname_placeholder">Cunningham Lindsey New Zealand Limited of Christchurch</string>
    <string name="job_type_placeholder">Asbestos - Clearance</string>
    <string name="job_number_placeholder">AS180101</string>
    <string name="job_address_placeholder">100 Geronimo Way, Riccarton, Auckland</string>
    <string name="add_new_sample">Add Bulk Asbestos Sample</string>
    <string name="fab_new_task">New Task</string>
    <string name="fab_new_asbestos_bulk">New Bulk Sample</string>
    <string name="fab_new_asbestos_air">New Air Sample</string>
    <string name="pick_image_intent_text">Pick image intent</string>
    <string name="sample_survey_desc">This survey is used for bulk sampling of presumed asbestos-containing materials. Unlike a management or refurbishment/demolition survey, this does not involve an inspection of the property. However, it does include a material risk assessment of the sampled material.</string>
    <string name="sample_survey_title">Sampling Survey</string>
    <string name="bulk_sampling_title">Bulk Sampling</string>
    <string name="bulk_sampling_desc">This task involves bulk sampling of presumed asbestos-containing materials. The items that are to be sampled are directed by the client. No assessment of the premises or the condition of the materials is made.</string>
    <string name="management_survey_desc">This survey involves a thorough inspection of the premises and notes the condition and extent of all asbestos-containing materials that may be disturbed during day-to-day occupation of the premises or during routine maintenance.</string>
    <string name="management_survey_title">Management Survey</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
