<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="nz.co.k2.k2e.ui.jobs.jobmain.JobViewModel" />
    </data>
        <android.support.constraint.ConstraintLayout android:layout_height="match_parent" android:layout_width="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">


                    <EditText
                        android:id="@+id/addressText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.currentJob.address}"
                        tools:text="@string/job_address_placeholder" />

                    <TextView
                        android:id="@+id/descriptionLabel"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="bottom"
                        android:text="@string/job_description_label"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/descriptionText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.currentJob.description}"
                        tools:text="@string/job_description_placeholder" />

                    <TextView
                        android:id="@+id/photoLabel"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:gravity="bottom"
                        android:text="@string/title_photo"
                        android:textStyle="bold" />

                    <!--<ImageView-->
                    <!--android:id="@+id/image_title_thumb"-->
                    <!--android:layout_width="120dp"-->
                    <!--android:layout_height="76dp"-->
                    <!--android:layout_gravity="center_horizontal"-->
                    <!--android:background="@color/black_effective" />-->


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/photo_short_dimen">

                        <ImageView
                            android:id="@+id/image_title_photo"
                            android:layout_width="@dimen/photo_long_dimen"
                            android:layout_height="@dimen/photo_short_dimen"
                            android:layout_centerHorizontal="true"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="16dp"
                            android:background="@color/black_effective" />

                        <ImageButton
                            android:id="@+id/btn_title_photo"
                            android:layout_width="@dimen/photo_long_dimen"
                            android:layout_height="@dimen/photo_short_dimen"
                            android:layout_alignParentBottom="false"
                            android:layout_alignParentLeft="false"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="16dp"
                            android:background="#00000000"
                            android:foregroundGravity="center_horizontal"
                            app:srcCompat="@drawable/ic_camera2" />

                    </RelativeLayout>

                </LinearLayout>
            </ScrollView>
        </android.support.constraint.ConstraintLayout>
</layout>