<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="nz.co.k2.k2e.ui.jobs.myjobs.JobsItemViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            app:cardElevation="1dp"
            app:cardBackgroundColor="@{viewModel.BgColour}">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_type_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="job type icon"
                    android:padding="8dp"
                    android:src="@{viewModel.getIcon(context)}"
                    tools:src="@drawable/ic_my_jobs" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="top"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/WFMjobnumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp"
                            android:text="@{viewModel.jobNumber}"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            tools:text="@string/job_number_placeholder" />

                        <TextView
                            android:id="@+id/WFMclientname"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:text="@{viewModel.clientName}"
                            android:textSize="14sp"
                            tools:text="@string/job_clientname_placeholder" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/WFMjobaddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@{viewModel.address}"
                        android:textSize="14sp"
                        android:textStyle="italic"
                        tools:text="@string/job_address_placeholder" />

                </LinearLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</layout>
